--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
         {% endfor %}
 
         <!-- CV link -->
-        <a class="page-link" href="{{ '/assets/pdf/CV.pdf' | prepend: site.baseurl | prepend: site.url }}">CV</a>
+        <a class="page-link" href="{{ '/assets/pdf/cv.pdf' | prepend: site.baseurl | prepend: site.url }}">CV</a>
 
       </div>
     </nav>
