--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -18,29 +18,29 @@
 			{% for author in entry.author_array %}
 				{% if forloop.length == 1 %}
 					{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
-						<strong>{{author.last}}, {{author.first}}</strong>
+						<strong>{{author.first}} {{author.last}}</strong>
 					{% else %}
-						{{author.last}}, {{author.first}}
+						{{author.first}} {{author.last}}
 					{% endif %}
 				{% else %}
 					{% unless forloop.last %}
 						{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
-							<strong>{{author.last}}, {{author.first}}</strong>,
+							<strong>{{author.first}} {{author.last}}</strong>,
 						{% else %}
 							{% if site.data.coauthors[author.last] %}
-								<a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.last}}, {{author.first}}</a>, 
+								<a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.first}} {{author.last}}</a>, 
 							{% else %}
-								{{author.last}}, {{author.first}},
+								{{author.first}} {{author.last}},
 							{% endif %}
 						{% endif %}
 					{% else %}
 						{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
-							and <strong>{{author.last}}, {{author.first}}</strong>,
+							and <strong>{{author.first}} {{author.last}}</strong>,
 						{% else %}
 							{% if site.data.coauthors[author.last] %}
-								and <a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.last}}, {{author.first}}</a> 
+								and <a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.first}} {{author.last}}</a> 
 							{% else %}
-								and {{author.last}}, {{author.first}}
+								and {{author.first}} {{author.last}}
 							{% endif %}
 						{% endif %}
 					{% endunless %}
