--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -17,14 +17,14 @@
 		<span class="author">
 			{% for author in entry.author_array %}
 				{% if forloop.length == 1 %}
-					{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
+					{% if author.first == site.scholar.first_name and author.last contains site.scholar.last_name%}
 						<strong>{{author.first}} {{author.last}}</strong>
 					{% else %}
 						{{author.first}} {{author.last}}
 					{% endif %}
 				{% else %}
 					{% unless forloop.last %}
-						{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
+						{% if author.first == site.scholar.first_name and author.last contains site.scholar.last_name%}
 							<strong>{{author.first}} {{author.last}}</strong>,
 						{% else %}
 							{% if site.data.coauthors[author.last] %}
@@ -34,7 +34,7 @@
 							{% endif %}
 						{% endif %}
 					{% else %}
-						{% if author.last == site.scholar.last_name and author.first == site.scholar.first_name %}
+						{% if author.first == site.scholar.first_name and author.last contains site.scholar.last_name%}
 							and <strong>{{author.first}} {{author.last}}</strong>,
 						{% else %}
 							{% if site.data.coauthors[author.last] %}
